[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/screens/in_game.gd" type="Script" id=1]
[ext_resource path="res://scripts/screens/in_game/game_camera.gd" type="Script" id=2]
[ext_resource path="res://resources/material/warp_shadermaterial.tres" type="Material" id=3]
[ext_resource path="res://scenes/control/virtual_joystick.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/static/touch_button.png" type="Texture" id=5]
[ext_resource path="res://scenes/screens/dialog/in_game_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/hp_bar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/screens/dialog/game_over_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/font/ui_font_error.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/sprites/static/ui/ui_button_menu_normal.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/static/ui/ui_button_menu_pressed.png" type="Texture" id=11]
[ext_resource path="res://scenes/ui/kinetic_bar.tscn" type="PackedScene" id=12]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=13]
[ext_resource path="res://assets/sprites/static/ui/ui_icon_coin.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/static/ui/ui_icon_soul.png" type="Texture" id=15]
[ext_resource path="res://resources/font/ui_font_small.tres" type="DynamicFont" id=16]
[ext_resource path="res://scripts/screens/in_game/in_game_stat_panel.gd" type="Script" id=17]
[ext_resource path="res://scripts/screens/in_game/in_game_test_stat.gd" type="Script" id=18]
[ext_resource path="res://scripts/screens/in_game/in_game_dash_button.gd" type="Script" id=19]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="InGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Back" type="Node2D" parent="."]

[node name="GameCamera" type="Camera2D" parent="."]
rotation = 3.14159
scale = Vector2( 60.0647, 678.86 )
script = ExtResource( 2 )

[node name="ShaderLayer" type="CanvasLayer" parent="."]

[node name="Warp" type="ColorRect" parent="ShaderLayer"]
light_mask = 0
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="HPBar" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_top = 16.0
margin_bottom = 60.0

[node name="KineticBar" parent="CanvasLayer" instance=ExtResource( 12 )]
margin_top = 70.0

[node name="PlayerMarkerCont" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 150.0
margin_right = -300.0
margin_bottom = -150.0

[node name="MenuButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 10.0
margin_right = -36.0
margin_bottom = 74.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="MoveControl" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = -250.0
mouse_filter = 1

[node name="MoveJoystick" parent="CanvasLayer/MoveControl" instance=ExtResource( 4 )]
z_as_relative = false

[node name="AttackControl" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -250.0
margin_right = -300.0
margin_bottom = -250.0
mouse_filter = 1

[node name="AttackJoystick" parent="CanvasLayer/AttackControl" instance=ExtResource( 4 )]
z_as_relative = false

[node name="DashButton" type="TouchScreenButton" parent="CanvasLayer/AttackControl"]
position = Vector2( -300, 120 )
scale = Vector2( 4, 4 )
normal = ExtResource( 5 )
shape = SubResource( 1 )
script = ExtResource( 19 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 16.0
margin_right = 254.0
margin_bottom = 114.0
theme = ExtResource( 13 )
script = ExtResource( 17 )

[node name="IconCont" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_right = 0.4
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 1.0
margin_right = -0.200005
margin_bottom = -1.0
custom_constants/separation = 0

[node name="Coin" type="TextureRect" parent="CanvasLayer/Panel/IconCont"]
margin_right = 61.0
margin_bottom = 48.0
texture = ExtResource( 14 )

[node name="Soul" type="TextureRect" parent="CanvasLayer/Panel/IconCont"]
margin_top = 48.0
margin_right = 61.0
margin_bottom = 96.0
texture = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.200005
margin_top = 1.0
margin_right = -30.0
margin_bottom = -1.0
custom_constants/separation = 0

[node name="GoldCount" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 92.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 16 )
text = "0"
align = 2
valign = 1

[node name="SoulCount" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = ExtResource( 16 )
text = "0"
align = 2
valign = 1

[node name="TestLabel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -115.0
margin_right = 340.0
margin_bottom = -9.0
custom_fonts/font = ExtResource( 9 )
valign = 2

[node name="TestStat" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -225.0
margin_top = 93.0
margin_right = -29.0
margin_bottom = 453.0
script = ExtResource( 18 )

[node name="LabelCont" type="VBoxContainer" parent="CanvasLayer/TestStat"]
anchor_right = 0.6
anchor_bottom = 1.0

[node name="ValueCont" type="VBoxContainer" parent="CanvasLayer/TestStat"]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[connection signal="pressed" from="CanvasLayer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/AttackControl/DashButton" to="CanvasLayer/AttackControl/DashButton" method="_on_DashButton_pressed"]
[connection signal="released" from="CanvasLayer/AttackControl/DashButton" to="CanvasLayer/AttackControl/DashButton" method="_on_DashButton_released"]
